--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "formik": "^2.2.9",
+    "mdbreact": "^5.1.0",
     "primereact": "^6.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
